# obj2brs

./: .gitignore  Cargo.toml  README.md  elf.brs  reference.brs
src/: barycentric.rs  cli.rs  color.rs  geom.rs  gui.rs  icon.rs  intersect.rs  load.rs  main.rs  octree.rs  palette.rs  rampify.rs  simplify.rs  voxelize.rs
src/geom/: polyhedron.rs
src/load/: obj_ext.rs
