[package]
name = "obj2brs"
version = "0.1.3"
authors = ["Kmschr <Kmschr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = ["reference.brs"]

[dependencies]
brickadia = "0.1.14"
tobj = "2.0"
cgmath = "0.17"
image = "0.23"
uuid = "0.7"
chrono = "0.4"
eframe = "0.17"
dirs = "4.0.0"
rfd = "0.8"
rampifier = { git = "https://github.com/Wrapperup/rampifier" }

[features]
