[package]
name = "obj2brs"
version = "0.1.3"
authors = ["Kmschr <Kmschr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = ["reference.brs"]

[dependencies]
brickadia = "0.1.26"
tobj = "3.2"
cgmath = "0.18"
image = "0.24"
uuid = "1.1"
chrono = "0.4"
eframe = "0.19"
dirs = "4.0.0"
rfd = "0.10"
rampifier = { git = "https://github.com/Wrapperup/rampifier" }

[features]
